# paper_reading

./: .gitignore  .style.yapf  AGENTS.md  README.md  README_zh.md  batch_process.py  config.yaml  download_mineru_model.py  download_model.py  extract_pages.py  extract_pages.yaml  format.sh  magic-pdf.json  main.py  parser.py  pdf_process.py  process.py  process_batch_pdf.py  process_pdf.py  pyproject.toml  requirements.txt  run.sh  run_pdf_process.sh  run_process_pdf.sh  start_jupyter.sh  test_cot.py  test_odl_full.py  test_opendataloader_api.py  utils.py
.agents/skills/digest-to-md/: SKILL.md
.agents/skills/extract-pages/: SKILL.md
.agents/skills/extract-pages/scripts/: run.sh
.agents/skills/process-pdf/: SKILL.md
.agents/skills/process-pdf/scripts/: run.sh
docs/: odl-formula-processing.md  skill-distribution.md
opendataloader/: api.md
paper_reading/: Dockerfile  __init__.py  cli.py  config.py  extract_pages.py  llm.py  log.py  pdf_parser.py  pipeline.py  steps.py  utils.py
paper_reading/resources/: mineru.json
tests/: test_llm.py  test_pdf_parser.py  test_pipeline.py  test_utils.py
