[project]
name = "paper-reading"
version = "0.1.0"
description = "A PDF processing pipeline for academic papers with summarization and translation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyYAML",
    "StrEnum",
    "diskcache",
    "huggingface-hub",
    "jupyterlab",
    "mineru[core]",
    "modelscope",
    "ollama",
    "pydantic",
    "pydantic-settings[yaml]",
    "pypdf",
    "tiktoken",
    "xxhash",
    "torch",
    "doclayout_yolo",
    "ultralytics",
    "transformers",
    "ftfy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
#select = ["E4", "E7", "E9", "F"]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["B009"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "diskcache",
    "mineru.*",
    "modelscope",
]
ignore_missing_imports = true
